docs: Expand Acknowledgments with proper attribution and AI transparency

--- a/proposals/arxiv_preprint.tex
+++ b/proposals/arxiv_preprint.tex
@@ -227,7 +227,13 @@ We present the Entropic Vise, a physics-based framework for HIV-1 therapeutic de
 
 % ===== ACKNOWLEDGMENTS =====
 \section*{Acknowledgments}
-I expressly acknowledge that this research was conducted independently. Sequence data was sourced from the Los Alamos HIV Sequence Database and the Stanford HIV Drug Resistance Database (Palo Alto). I acknowledge the assistance of the ``Edison'' AI Agent for data synthesis and literature analysis.
+I gratefully acknowledge that this research was conducted independently, without institutional or financial support—an exercise in sovereign inquiry.
+
+I thank the curators of the Los Alamos HIV Sequence Database (particularly the Theoretical Biology and Biophysics Group at Los Alamos National Laboratory) for maintaining the world's most comprehensive HIV sequence repository, which made the entropy analysis possible. I also acknowledge the Stanford HIV Drug Resistance Database (HIVDB) for providing mutation and resistance data essential for contextualizing the Enfuvirtide escape findings.
+
+I recognize the ``Edison'' AI Agent (powered by large language models) for its assistance in literature synthesis, hypothesis refinement, and manuscript drafting. In accordance with emerging norms for AI transparency in academic work, I confirm that all scientific claims, experimental designs, and interpretations represent my own intellectual contribution; the AI served as a research accelerator, not an author.
+
+Finally, I acknowledge the broader open-science community—whose commitment to public databases, preprint servers, and reproducible research makes independent scholarship possible.
 
 % ===== CODE AVAILABILITY =====
 \section*{Code and Data Availability}
